--- a/app/src/main/res/layout/activity_province.xml
+++ b/app/src/main/res/layout/activity_province.xml
@@ -23,5 +23,22 @@
         android:background="@android:color/darker_gray"
         android:gravity="center"
         android:text="选择地区" />
+    <TextView
+        android:id="@+id/tv_time"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="1dp"
+        android:background="@android:color/darker_gray"
+        android:gravity="center"
+        android:text="选择日期" />
+
+    <yanyu.com.mycity.MyTextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="1dp"
+        android:background="@android:color/darker_gray"
+        android:gravity="center"
+        android:text="选择地区"
+        android:textColor="@android:color/black" />
 
 </LinearLayout>
